trunk/Software/OM/omapi/include/omapi.h


#define OM_VERSION 104
OM_EXPORT int OmStartup(int version);
OM_EXPORT int OmShutdown(void);
OM_EXPORT int OmSetLogStream(int fd);
typedef void(*OmLogCallback)(void *, const char *);
OM_EXPORT int OmSetLogCallback(OmLogCallback logCallback, void *reference);
typedef enum
{
    OM_DEVICE_REMOVED,                  
    OM_DEVICE_CONNECTED                 
} OM_DEVICE_STATUS;
typedef void(*OmDeviceCallback)(void *, int, OM_DEVICE_STATUS);
OM_EXPORT int OmSetDeviceCallback(OmDeviceCallback deviceCallback, void *reference);
OM_EXPORT int OmGetDeviceIds(int *deviceIds, int maxDevices);
typedef unsigned long OM_DATETIME;
OM_EXPORT int OmGetVersion(int deviceId, int *firmwareVersion, int *hardwareVersion);
OM_EXPORT int OmGetBatteryLevel(int deviceId);
OM_EXPORT int OmGetMemoryHealth(int deviceId);
#define OM_MEMORY_HEALTH_ERROR   1  
#define OM_MEMORY_HEALTH_WARNING 8  
OM_EXPORT int OmGetBatteryHealth(int deviceId);
OM_EXPORT int OmGetAccelerometer(int deviceId, int *x, int *y, int *z);
OM_EXPORT int OmGetTime(int deviceId, OM_DATETIME *time);
OM_EXPORT int OmSetTime(int deviceId, OM_DATETIME time);
typedef enum
{
    OM_LED_AUTO = -1,           
    OM_LED_OFF = 0,             
    OM_LED_BLUE = 1,            
    OM_LED_GREEN = 2,           
    OM_LED_CYAN = 3,            
    OM_LED_RED = 4,             
    OM_LED_MAGENTA = 5,         
    OM_LED_YELLOW = 6,          
    OM_LED_WHITE = 7            
} OM_LED_STATE;
OM_EXPORT int OmSetLed(int deviceId, OM_LED_STATE ledState);
OM_EXPORT int OmIsLocked(int deviceId, int *hasLockCode);
OM_EXPORT int OmSetLock(int deviceId, unsigned short code);
OM_EXPORT int OmUnlock(int deviceId, unsigned short code);
OM_EXPORT int OmSetEcc(int deviceId, int state);
OM_EXPORT int OmGetEcc(int deviceId);
OM_EXPORT int OmCommand(int deviceId, const char *command, char *buffer, size_t bufferSize, const char *expected, unsigned int timeoutMs, char **parseParts, int parseMax);
OM_EXPORT int OmGetDelays(int deviceId, OM_DATETIME *startTime, OM_DATETIME *stopTime);
OM_EXPORT int OmSetDelays(int deviceId, OM_DATETIME startTime, OM_DATETIME stopTime);
OM_EXPORT int OmGetSessionId(int deviceId, unsigned int *sessionId);
OM_EXPORT int OmSetSessionId(int deviceId, unsigned int sessionId);
#define OM_METADATA_SIZE 448
OM_EXPORT int OmGetMetadata(int deviceId, char *metadata);
OM_EXPORT int OmSetMetadata(int deviceId, const char *metadata, int size);
OM_EXPORT int OmGetLastConfigTime(int deviceId, OM_DATETIME *time);
typedef enum
{
    OM_ERASE_NONE = 0,                  
    OM_ERASE_DELETE = 1,                
    OM_ERASE_QUICKFORMAT = 2,           
    OM_ERASE_WIPE = 3                   
} OM_ERASE_LEVEL;
OM_EXPORT int OmEraseDataAndCommit(int deviceId, OM_ERASE_LEVEL eraseLevel);
#define OmClearDataAndCommit(_deviceId) OmEraseDataAndCommit((_deviceId), OM_ERASE_QUICKFORMAT)
#define OmCommit(_deviceId) OmEraseDataAndCommit((_deviceId), OM_ERASE_NONE)
#define OM_ACCEL_DEFAULT_RATE 100
#define OM_ACCEL_DEFAULT_RANGE 8
OM_EXPORT int OmGetAccelConfig(int deviceId, int *rate, int *range);
OM_EXPORT int OmSetAccelConfig(int deviceId, int rate, int range);
typedef enum
{
    OM_DOWNLOAD_NONE,                   
    OM_DOWNLOAD_ERROR,                  
    OM_DOWNLOAD_PROGRESS,               
    OM_DOWNLOAD_COMPLETE,               
    OM_DOWNLOAD_CANCELLED,              
} OM_DOWNLOAD_STATUS;
typedef void(*OmDownloadCallback)(void *, int, OM_DOWNLOAD_STATUS, int);
OM_EXPORT int OmSetDownloadCallback(OmDownloadCallback downloadCallback, void *reference);
OM_EXPORT int OmGetDataFilename(int deviceId, char *filenameBuffer);
OM_EXPORT int OmGetDataRange(int deviceId, int *dataBlockSize, int *dataOffsetBlocks, int *dataNumBlocks, OM_DATETIME *startTime, OM_DATETIME *endTime);
OM_EXPORT int OmBeginDownloading(int deviceId, int dataOffsetBlocks, int dataLengthBlocks, const char *destinationFile);
OM_EXPORT int OmQueryDownload(int deviceId, OM_DOWNLOAD_STATUS *downloadStatus, int *downloadValue);
OM_EXPORT int OmWaitForDownload(int deviceId, OM_DOWNLOAD_STATUS *downloadStatus, int *downloadValue);
OM_EXPORT int OmCancelDownload(int deviceId);
#define OM_TRUE                     1       
#define OM_FALSE                    0       
#define OM_OK                       0       
#define OM_E_FAIL                   -1      
#define OM_E_UNEXPECTED             -2      
#define OM_E_NOT_VALID_STATE        -3      
#define OM_E_OUT_OF_MEMORY          -4      
#define OM_E_INVALID_ARG            -5      
#define OM_E_POINTER                -6      
#define OM_E_NOT_IMPLEMENTED        -7      
#define OM_E_ABORT                  -8      
#define OM_E_ACCESS_DENIED          -9      
#define OM_E_INVALID_DEVICE         -10     
#define OM_E_UNEXPECTED_RESPONSE    -11     
#define OM_E_LOCKED                 -12     
#define OM_SUCCEEDED(value) ((value) >= 0)  
#define OM_FAILED(value) ((value) < 0)      
OM_EXPORT const char *OmErrorString(int status);
#define OM_DATETIME_FROM_YMDHMS(year, month, day, hours, minutes, seconds) \
                ( (((OM_DATETIME)((year) % 100) & 0x3f) << 26) \
                | (((OM_DATETIME)(month)        & 0x0f) << 22) \
                | (((OM_DATETIME)(day)          & 0x1f) << 17) \
                | (((OM_DATETIME)(hours)        & 0x1f) << 12) \
                | (((OM_DATETIME)(minutes)      & 0x3f) <<  6) \
                | (((OM_DATETIME)(seconds)      & 0x3f)      ) \
                )
#define OM_DATETIME_YEAR(dateTime)    ((unsigned int)((unsigned char)(((dateTime) >> 26) & 0x3f)) + 2000) 
#define OM_DATETIME_MONTH(dateTime)   ((unsigned char)(((dateTime) >> 22) & 0x0f))  
#define OM_DATETIME_DAY(dateTime)     ((unsigned char)(((dateTime) >> 17) & 0x1f))  
#define OM_DATETIME_HOURS(dateTime)   ((unsigned char)(((dateTime) >> 12) & 0x1f))  
#define OM_DATETIME_MINUTES(dateTime) ((unsigned char)(((dateTime) >>  6) & 0x3f))  
#define OM_DATETIME_SECONDS(dateTime) ((unsigned char)(((dateTime)      ) & 0x3f))  
#define OM_DATETIME_MIN_VALID OM_DATETIME_FROM_YMDHMS(2000,  1,  1,  0, 0,   0)     
#define OM_DATETIME_MAX_VALID OM_DATETIME_FROM_YMDHMS(2063, 12, 31, 23, 59, 59)     
#define OM_DATETIME_ZERO (0)                                                        
#define OM_DATETIME_INFINITE ((OM_DATETIME)-1)                                      